adjusting width of main hero to fix overflow-x issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@ body {
 
 .main-hero {
   margin-top: 15vh;
+  width: 100vw;
 }
 
 .custom-divider {
